--- a/SongPlayHistory/SongPlayHistory.csproj
+++ b/SongPlayHistory/SongPlayHistory.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{A27CE832-9835-494F-BCD9-1D8A4A0F90ED}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LocalRank</RootNamespace>
-    <AssemblyName>LocalRank</AssemblyName>
+    <RootNamespace>SongPlayHistory</RootNamespace>
+    <AssemblyName>SongPlayHistory</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <PathMap>$(SolutionDir)=C:\</PathMap>
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BS_Utils">
+      <HintPath>References\Plugins\BS_Utils.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -81,10 +84,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="PluginConfig.cs" />
-    <Compile Include="LocalRank.cs" />
+    <Compile Include="SongPlayHistory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
