--- a/SongPlayHistory/manifest.json
+++ b/SongPlayHistory/manifest.json
@@ -6,8 +6,6 @@
   "id": "SongPlayHistory",
   "name": "SongPlayHistory",
   "version": "0.1.0",
-  "dependsOn": {
-
-  },
+  "dependsOn": {},
   "features": []
 }
