--- a/SongPlayHistory/manifest.json
+++ b/SongPlayHistory/manifest.json
@@ -1,8 +1,8 @@
 ﻿{
   "$schema": "https://raw.githubusercontent.com/nike4613/ModSaber-MetadataFileSchema/master/Schema.json",
-  "author": "swift-kim",
+  "author": "peperoro",
   "description": "Compare your own scores",
-  "gameVersion": "1.6.0",
+  "gameVersion": "1.6.1",
   "id": "SongPlayHistory",
   "name": "SongPlayHistory",
   "version": "0.1.0",
