--- a/SongPlayHistory/SongPlayHistory.csproj
+++ b/SongPlayHistory/SongPlayHistory.csproj
@@ -99,6 +99,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BeatSaber.cs" />
     <Compile Include="HarmonyPatches\LevelListTableCell_RefreshVisuals.cs" />
     <Compile Include="HarmonyPatches\LevelListTableCell_SetDataFromLevel.cs" />
     <Compile Include="Plugin.cs" />
@@ -108,6 +109,8 @@
     <Compile Include="SongPlayHistory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsController.cs" />
+    <Compile Include="SongPlayHistoryModel.cs" />
+    <Compile Include="SongPlayHistoryUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="CreateJunctions.bat" />
