--- a/SongPlayHistory/SongPlayHistory.csproj
+++ b/SongPlayHistory/SongPlayHistory.csproj
@@ -99,7 +99,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BeatSaber.cs" />
+    <Compile Include="BeatSaberUI.cs" />
     <Compile Include="HarmonyPatches\LevelListTableCell_RefreshVisuals.cs" />
     <Compile Include="HarmonyPatches\LevelListTableCell_SetDataFromLevel.cs" />
     <Compile Include="Plugin.cs" />
