--- a/SongPlayHistory/manifest.json
+++ b/SongPlayHistory/manifest.json
@@ -5,9 +5,9 @@
   "gameVersion": "1.6.1",
   "id": "SongPlayHistory",
   "name": "SongPlayHistory",
-  "version": "1.0.0",
-  "dependsOn": 
-  {
+  "version": "1.1.0",
+  "dependsOn": {
+    "BS Utils": "^1.4.1",
     "BeatSaberMarkupLanguage": "^1.1.5"
   },
   "features": []
