--- a/SongPlayHistory/SongPlayHistory.csproj
+++ b/SongPlayHistory/SongPlayHistory.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>SongPlayHistory</RootNamespace>
     <AssemblyName>SongPlayHistory</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <LangVersion>8.0</LangVersion>
     <FileAlignment>512</FileAlignment>
     <PathMap>$(SolutionDir)=C:\</PathMap>
     <DebugType>portable</DebugType>
