--- a/SongPlayHistory/manifest.json
+++ b/SongPlayHistory/manifest.json
@@ -3,10 +3,15 @@
   "description": [
     "Track all your scores."
   ],
-  "gameVersion": "1.11.0",
+  "gameVersion": "1.12.2",
   "id": "SongPlayHistory",
   "name": "SongPlayHistory",
-  "version": "1.3.1",
+  "version": "1.4.0",
+  "dependsOn": {
+    "BSIPA": "^4.1.3",
+    "BeatSaberMarkupLanguage": "^1.4.0",
+    "BS Utils": "^1.6.0"
+  },
   "features": [],
   "links": {
     "project-home": "https://github.com/swift-kim/SongPlayHistory"
