Convert to SDK style

--- a/SongPlayHistory.UnitTest/SongPlayHistory.UnitTest.csproj
+++ b/SongPlayHistory.UnitTest/SongPlayHistory.UnitTest.csproj
@@ -1,23 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <IsPackable>false</IsPackable>
     <BeatSaberDir>$(ProjectDir)..\SongPlayHistory\References</BeatSaberDir>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\SongPlayHistory\SongPlayHistory.csproj" />
     <Reference Include="IPA.Loader">
-      <HintPath>..\SongPlayHistory\References\IPA\Data\Managed\IPA.Loader.dll</HintPath>
+      <HintPath>$(BeatSaberDir)\IPA\Data\Managed\IPA.Loader.dll</HintPath>
     </Reference>
   </ItemGroup>
-
 </Project>
