--- a/SongPlayHistory/SongPlayHistoryContinued.csproj
+++ b/SongPlayHistory/SongPlayHistoryContinued.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>net472</TargetFramework>
-    <AssemblyName>SongPlayHistory</AssemblyName>
-    <AssemblyVersion>1.5.3</AssemblyVersion>
+    <AssemblyName>SongPlayHistoryContinued</AssemblyName>
+    <AssemblyVersion>1.6.0</AssemblyVersion>
     <LangVersion>8.0</LangVersion>
     <AppendTargetFrameworkToOutputPath>False</AppendTargetFrameworkToOutputPath>
     <BeatSaberDir>$(ProjectDir)References</BeatSaberDir>
